fix image stretch and about media query

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -69,6 +69,13 @@
 }
 
 @media (max-width: 714px) {
+    .about p {
+        font-size: 14px;
+        line-height: 23px;
+    }
+}
+
+@media (max-width: 700px) {
     .about {
         flex-direction: column;
         align-items: center;
