--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -52,6 +52,7 @@
 .project-img {
     display: flex;
     justify-content: center;
-    max-width: 100%;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
